RESOLVED FIXED267594
[WGSL] Atomics inside structs and arrays are not initialized
https://bugs.webkit.org/show_bug.cgi?id=267594
Summary [WGSL] Atomics inside structs and arrays are not initialized
Tadeu Zagallo
Reported 2024-01-16 10:52:53 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-16 10:53:06 PST
Tadeu Zagallo
Comment 2 2024-01-16 11:10:10 PST
EWS
Comment 3 2024-01-17 11:04:52 PST
Committed 273133@main (382262ea04f7): <https://commits.webkit.org/273133@main> Reviewed commits have been landed. Closing PR #22828 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.