[WGSL] Atomics inside structs and arrays are not initialized https://bugs.webkit.org/show_bug.cgi?id=267594 rdar://121062530

Reviewed by Mike Wyrzykowski.

In 273065@main we started explicitly initializing atomic variables in the workgroup
address space, but not when the atomic was nested inside a struct or array. This
patch makes it so that we traverse the types of all variables in the workgroup
space, search for nested atomics and initialize them.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertLocalDefinitions):
(WGSL::RewriteGlobalVariables::initializeAtomics):
(WGSL::RewriteGlobalVariables::atomicStoreInitialValue):
(WGSL::RewriteGlobalVariables::containsAtomic):

Canonical link: https://commits.webkit.org/273133@main